--- a/1/index.html
+++ b/1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
-    <title> Технології розробки програмного забезпечення - 3. Візуальне програмування </title>
+    <title>«Комп'ютерний практикум №3. Git і GitHub» </title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" 
